--- a/.gitignore
+++ b/.gitignore
@@ -213,4 +213,8 @@ dmypy.json
 # Ignore all local history of files
 .history
 
+### MacOS file(Baizhu) ###
+.DS_Store
+tests/.DS_Store
+
 # End of https://www.gitignore.io/api/python,pycharm,visualstudiocode
